Fixed alignment of trending area

--- a/style.css
+++ b/style.css
@@ -191,11 +191,23 @@ hr {
 }
 
 .trend-tile {
-    border-radius: 10px;
     background-color: white;
     padding: var(--main-padding);
+    border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    box-shadow: 0px 2px 3px #afafaf;
+}
+
+.trendICO {
+    display: flex;
+    align-items: center;
+    padding-bottom: 15px;
+}
+
+.trend-name {
+    font-size: 12px;
+    color: #585858
 }
